TL-16767 availability: fix layout problem when adding an activity restriction

--- a/theme/roots/less/totara/forms.less
+++ b/theme/roots/less/totara/forms.less
@@ -395,14 +395,13 @@ input[type="checkbox"] {
     li {
         display: block;
         list-style-type: none;
-        padding: 0 0 4px;
+        padding: 0 10px 4px;
         clear: both;
         border-bottom: 1px solid @gray-lighter;
         margin-bottom: 4px;
     }
     ul button {
         float: left;
-        margin: 0 10px;
         min-width: 140px;
         margin-top: 4px;
         display: inline;
